<resources>
    <string name="app_name">Easy Order</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="please_wait">Please Wait</string>

    <!-- placeholders -->
    <string name="last_name_placeholder">Last name</string>
    <string name="first_name_placeholder">First name</string>
    <string name="phone_placeholder">Phone</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_password_placeholder">Confirm password</string>

    <!-- LOGIN PAGE -->
    <string name="please_login_message">Please login</string>
    <string name="forgotten_password_link">Password forgotten?</string>
    <string name="signup_button">No account? Sign up here :)</string>
    <string name="login_button">LOGIN</string>

    <!-- SIGNUP PAGE -->
    <string name="please_signup_message">All fields are mandatory</string>
    <string name="signup_ok_message">You have successfully signed up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="validate_button">Validate</string>

    <!-- USERS LIST -->
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="deleted_user_message">The user has been deleted</string>

    <!-- Side Menu NavBar-->
    <string name="users_menu_item">Users</string>
    <string name="new_order_menu_item">New order</string>
    <string name="taken_orders_menu_item">Taken orders</string>
    <string name="preparing_orders_menu_item">Orders being prepared</string>
    <string name="notifications_menu_item">Notifications</string>

    <!-- Page Titles-->
    <string name="users_title">Users List</string>
    <string name="new_order_title">New Order</string>
    <string name="taken_orders_title">Taken Orders</string>
    <string name="preparing_orders_title">Orders Being Prepared</string>
    <string name="notifications_title">Notifications</string>

    <!-- Order Item List -->
    <string name="order_cooker">Cooker: </string>
    <string name="order_waiter">Waiter: </string>
    <string name="order_amount">Total amount: </string>
    <string name="order_discount">Total discount: </string>
    <string name="order_total">Total: </string>
    <string name="new_order_submit">Submit order</string>
    <string name="order_successfully_sent">The order has been successfully sent to the kitchen</string>

    <!-- Notification Item List -->
    <string name="buzz_sender">Sender: </string>
    <string name="buzz_when">When: </string>
    <string name="buzz_message">Message: </string>
    <string name="buzz_no_notification">No notification</string>
</resources>
