<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="motacojo.mbds.fr.easyorder30.activities.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/input_Mdp_Register"
        android:layout_alignStart="@+id/input_Mdp_Register"
        android:id="@+id/input_MdpConfirm_Register"
        android:hint="@string/confirm_password_placeholder"
        android:textSize="14sp"
        android:layout_alignEnd="@+id/input_Mdp_Register"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:background="@drawable/input_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_Prenom_Register"
        android:hint="@string/first_name_placeholder"
        android:layout_below="@+id/input_Nom_Register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:background="@drawable/input_style"/>

    <TextView
        android:text="@string/please_signup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Message_Register"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:text="@string/validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SignUp_Register"
        android:layout_below="@+id/input_MdpConfirm_Register"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_green_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_Nom_Register"
        android:background="@drawable/input_style"
        android:padding="10dp"
        android:hint="@string/last_name_placeholder"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/tv_Message_Register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_Prenom_Register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioGroup_Sexe_register"
        android:checkedButton="@+id/radioBtn_Masculin_Register">

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtn_Feminin_Register"
            android:layout_marginEnd="66dp"
            android:layout_below="@+id/input_Prenom_Register"
            android:layout_alignParentEnd="true" />

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtn_Masculin_Register"
            android:layout_below="@+id/input_Prenom_Register"
            android:layout_alignEnd="@+id/radioGroup"
            android:layout_marginEnd="22dp"
            android:layout_weight="1" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/input_Email_Register"
        android:hint="@string/email_placeholder"
        android:textSize="14sp"
        android:layout_below="@+id/input_Tel_Register"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:background="@drawable/input_style"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/input_Mdp_Register"
        android:hint="@string/password_placeholder"
        android:textSize="14sp"
        android:layout_below="@+id/input_Email_Register"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:background="@drawable/input_style"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/input_Tel_Register"
        android:hint="@string/phone_placeholder"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:padding="10dp"
        android:background="@drawable/input_style"
        android:layout_below="@+id/radioGroup_Sexe_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
