<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/layer_list"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10">


        <TextView
            android:text="Cooker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderCooker_itemList"
            android:layout_below="@+id/chef"
            android:layout_alignStart="@+id/chef"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/waiter"
            android:id="@+id/waiter"
            android:layout_marginEnd="21dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="Waiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderWaiter_itemList"
            android:layout_below="@+id/waiter"
            android:layout_alignEnd="@+id/waiter" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/chef"
            android:id="@+id/chef"
            android:layout_marginStart="21dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_wrapping_product_item_list">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView_order_items"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00">
        <TextView
            android:text="25.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderTotal_itemList"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/tv_orderDiscount_itemList"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="4.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderDiscount_itemList"
            android:layout_below="@+id/tv_orderAmount_itemList"
            android:layout_alignEnd="@+id/tv_orderTotal_itemList" />

        <TextView
            android:text="@string/order_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/tv_order_amount"
            android:layout_alignEnd="@+id/tv_order_amount" />

        <TextView
            android:text="30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderAmount_itemList"
            android:textSize="14sp"
            android:layout_alignEnd="@+id/tv_orderTotal_itemList"
            android:layout_marginTop="17dp" />

        <TextView
            android:text="@string/order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_order_amount"
            android:layout_above="@+id/tv_orderDiscount_itemList"
            android:layout_toStartOf="@+id/tv_orderTotal_itemList"
            android:layout_marginEnd="31dp" />

        <TextView
            android:text="@string/order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_order_total"
            android:layout_alignBaseline="@+id/tv_orderTotal_itemList"
            android:layout_alignBottom="@+id/tv_orderTotal_itemList"
            android:layout_alignEnd="@+id/textView5" />
    </RelativeLayout>


</LinearLayout>
